--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -166,6 +166,8 @@
   "chaosBag.addToken_one": "{{name}} adds {{count}} {{token}} token to the chaos bag",
   "chaosBag.addToken_other": "{{name}} adds {{count}} {{token}} tokens to the chaos bag",
 
+  "chaosBag.addTokens": "{{name}} adds {{tokens}} tokens to the chaos bag",
+
   "chaosBag.removeToken_one": "{{name}} removes {{count}} {{token}} token from the chaos bag",
   "chaosBag.removeToken_other": "{{name}} removes {{count}} {{token}} tokens from the chaos bag",
 
@@ -214,6 +216,8 @@
   "action.heal.self": "{{name}} heals {{value}}",
   "action.heal.word": "heals",
 
+  "list.separator.two": " and ",
+  "list.separator.multiple": ", ",
   "preposition.and": "and",
   "plural.accusative.horror_one": "{{count}} horror",
   "plural.accusative.horror_other": "{{count}} horror",
