feat: added translation info

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -329,5 +329,7 @@
   "Special Thanks": "Special Thanks",
   "Application Info": "Application Info",
   "Device Info": "Device Info",
-  "Sponsors": "Sponsors"
+  "Sponsors": "Sponsors",
+  "Korean": "Korean",
+  "Chinese": "Chinese"
 }
