--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -351,5 +351,7 @@
   "Application Info": "О приложении",
   "Build Version": "Версия",
   "Device Info": "Об устройстве",
-  "Sponsors": "Спонсоры"
+  "Sponsors": "Спонсоры",
+  "Korean": "Корейский",
+  "Chinese": "Китайский"
 }
