fix: missed i18n keys

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -331,5 +331,8 @@
   "Device Info": "Device Info",
   "Sponsors": "Sponsors",
   "Korean": "Korean",
-  "Chinese": "Chinese"
+  "Chinese": "Chinese",
+  "Initial values": "Initial values",
+  "Negative values": "Negative values",
+  "Hand size": "Hand size"
 }
