--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -329,6 +329,7 @@
   "Special Thanks": "Special Thanks",
   "Application Info": "Application Info",
   "Device Info": "Device Info",
+  "Translation": "Translation",
   "Sponsors": "Sponsors",
   "Korean": "Korean",
   "Chinese": "Chinese",
