feat: updated @sarnetsky to hall of fame

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -10,8 +10,9 @@
   "about.hallOfFame.helios_sunrise": "Layered investigator arts",
   "about.hallOfFame.hauke": "some AI-uncropped investigator images",
   "about.hallOfFame.felice": "investigator card scans",
+  "about.hallOfFame.sarnetsky": "Application logo and icons",
 
-  "about.credits.arkhamCards.icons": "Eugene Sarnetsky",
+  "Eugene Sarnetsky": "Eugene Sarnetsky",
 
   "board.help.pins.press": "Press on a calculation on the board screen to unpin it",
 
