--- a/assets/i18n/core/zh-cn.json
+++ b/assets/i18n/core/zh-cn.json
@@ -11,7 +11,7 @@
   "about.hallOfFame.hauke": "一些AI扩展裁剪的调查员图片",
   "about.hallOfFame.felice": "调查员卡牌扫描件",
 
-  "about.credits.arkhamCards.icons": "Eugene Sarnetsky",
+  "Eugene Sarnetsky": "Eugene Sarnetsky",
 
   "board.help.pins.press": "在面板界面点击一个计算项以取消固定",
   "board.help.pins.longPress": "在面板界面长按一个计算项，可为本次计算揭示一个混乱标记",
