--- a/assets/i18n/core/zh.json
+++ b/assets/i18n/core/zh.json
@@ -11,7 +11,7 @@
   "about.hallOfFame.hauke": "一些AI擴展裁剪的調查員圖片",
   "about.hallOfFame.felice": "調查員卡牌掃描件",
 
-  "about.credits.arkhamCards.icons": "Eugene Sarnetsky",
+  "Eugene Sarnetsky": "Eugene Sarnetsky",
 
   "board.help.pins.press": "在麵闆界麵點擊一個計算項以取消固定",
   "board.help.pins.longPress": "在麵闆界麵長按一個計算項，可爲本次計算揭示一個混亂標記",
