--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -11,8 +11,9 @@
   "about.hallOfFame.helios_sunrise": "Графика из игры",
   "about.hallOfFame.hauke": "AI-увеличенные изображения сыщиков",
   "about.hallOfFame.felice": "Сканы карт сыщиков",
+  "about.hallOfFame.sarnetsky": "Логотип приложения и иконки",
 
-  "about.credits.arkhamCards.icons": "Евгений Сарнецкий",
+  "Eugene Sarnetsky": "Евгений Сарнецкий",
 
   "app.outdated.title": "Приложение устарело",
   "app.outdated.text": "Не так, как древние, но пора бы обновиться",
@@ -339,7 +340,7 @@
   "-2 [bless] and -2 [curse]": "-2 [bless] и -2 [curse]",
   "Hall of Fame": "Зал славы",
   "Lead Tester": "Ведущий тестировщик",
-  "ArkhamDB crew": "Команда ArkhamDB",
+  "ArkhamDB crew": "команда ArkhamDB",
   "Credits": "Авторы",
   "Card icons": "Иконки на картах",
   "ArkhamCards icons": "Иконки ArkhamCards",
