--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -38,8 +38,8 @@
   "board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
   "board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
 
-  "board.help.swipeLeft.main": "Swipe left to decrease base value by 1.",
-  "board.help.swipeRight.main": "Swipe right to increase base value by 1.",
+  "board.help.swipeLeft.main": "Swipe left to increase base value by 1.",
+  "board.help.swipeRight.main": "Swipe right to decrease base value by 1.",
   "board.help.press.main": "Decrease value by 1",
   "board.help.press.action": "Decrease value by 1. If value is 0, resets counter to its base value",
 
