refactor: app diagnostics

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -339,5 +339,6 @@
   "Chinese": "Chinese",
   "Initial values": "Initial values",
   "Negative values": "Negative values",
-  "Hand size": "Hand size"
+  "Hand size": "Hand size",
+  "Restart App": "Restart App"
 }
