feat: reload assets

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -340,5 +340,6 @@
   "Initial values": "Initial values",
   "Negative values": "Negative values",
   "Hand size": "Hand size",
-  "Restart App": "Restart App"
+  "Restart App": "Restart App",
+  "Reload downloaded assets": "Reload downloaded assets"
 }
