--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -359,5 +359,6 @@
   "Sponsors": "Спонсоры",
   "Korean": "Корейский",
   "Chinese": "Китайский",
-  "Restart App": "Перезапустить приложение"
+  "Restart App": "Перезапустить приложение",
+  "Reload downloaded assets": "Повторно загрузить данные"
 }
