feat: changed image url to gh pages

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -341,5 +341,6 @@
   "Negative values": "Negative values",
   "Hand size": "Hand size",
   "Restart App": "Restart App",
-  "Reload downloaded assets": "Reload downloaded assets"
+  "Reload downloaded assets": "Reload downloaded assets",
+  "Clear download queue": "Clear download queue"
 }
