--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -360,5 +360,6 @@
   "Korean": "Корейский",
   "Chinese": "Китайский",
   "Restart App": "Перезапустить приложение",
-  "Reload downloaded assets": "Повторно загрузить данные"
+  "Reload downloaded assets": "Повторно загрузить данные",
+  "Clear download queue": "Очистить очередь загрузок"
 }
