--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -50,6 +50,7 @@
   "board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс).",
   "board.help.special.daniela": "Нажмите на [claws], если враг вас атаковал. Это поменяет значение [elder_sign] для успеншого прохождения проверки.",
   "board.help.special.kymani": "Нажмите на [exhaust], если в вашей локации есть повёрнутый враг. Это поменяет значение [elder_sign] для успеншого прохождения проверки.",
+  "board.help.special.preston": "Удерживайте нажатие на счетчике фамильного наследства, чтобы переложить его значение на счётчик ресурсов",
 
   "board.help.calculator.result": "Минимальный результат – 0. Деление округляет результат в меньшую сторону.",
   "board.help.calculator.history": "Нажмите на кнопку «Считать», чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если изменятся параметры вашего сыщика. Удерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.",
