feat: base picker size

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -246,7 +246,7 @@
 	"Change": "Change",
 
 	"Picker animation": "Picker animation",
-	"Picker board size": "Picker board size",
+	"Picker size": "Picker size",
 
 	"Show initial Health/Sanity": "Show initial Health/Sanity",
 
