--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -264,7 +264,7 @@
 	"Negative values": "Отрицательные значения",
 
 	"Picker animation": "Анимация прокрутки",
-	"Board Picker Size": "Размер cчётчика",
+	"Picker Size": "Размер cчётчика",
 
 	"Show Game Text": "Игровой текст",
 	"Advanced": "Продвинутый режим",
