--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -68,6 +68,7 @@
 	"board.help.special.daniela": "Tap [claws] if an enemy attacked you. This will change the value of [elder_sign] for a successful test.",
 	"board.help.special.kymani": "Tap [exhaust] if there is an exhausted enemy at your location. This will change the value of [elder_sign] for a successful test.",
 	"board.help.special.preston": "Hold down on the family inheritance counter to transfer its value to the resources counter",
+	"board.help.special.wendy": "Tap [accessory] to mark that you have Wendy's amulet in play. If the amulet is in play, the value of the [elder_sign] token will be considered a automatical success.",
 
 	"board.help.chaosBag": "Tap and hold on a skill value to reveal a chaos token",
 	"board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
