feat: changed board select to controls in title

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -321,6 +321,12 @@
 	"Custom Content": "Custom Content",
 	"Upkeep resources": "Upkeep resources",
 
+	"Ravenous Tracker": "Ravenous Tracker",
+	"Cards beneath George": "Cards beneath George",
+	"Cards beneath Diana": "Cards beneath Diana",
+	"Cards beneath Gloria": "Cards beneath Gloria",
+	"Cards in your hand": "Cards in your hand",
+
 	"Player Window": "Player Window",
 	"Rules Reference": "Rules Reference",
 
