--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -341,6 +341,7 @@
 	"Cards beneath George": "Cards beneath George",
 	"Cards beneath Diana": "Карты под сыщиком",
 	"Cards beneath Gloria": "Карты под сыщиком",
+	"Cards in your hand": "Карты в руке",
 	"Upkeep resources": "Ресурсы в фазе передышки",
 
 	"Rules Reference": "Справочник",
