feat: check for updates

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -357,5 +357,6 @@
 	"Hand size": "Hand size",
 	"Restart App": "Restart App",
 	"Reload downloaded assets": "Reload downloaded assets",
-	"Clear download queue": "Clear download queue"
+	"Clear download queue": "Clear download queue",
+	"Check Updates": "Check Updates"
 }
