--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -29,8 +29,11 @@
 
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения.",
 
-	"board.help.swipeLeft.main": "Свайп влево увеличивает базовое значение на 1. Для счётчиков у левой границы экрана работает только при выключенной анимации счётчика.",
-	"board.help.swipeRight.main": "Свайп вправо уменьшает базовое значение на 1. Для счётчиков у правой границы экрана работает только при выключенной анимации счётчика.",
+	"board.help.swipeLeft.main": "Свайп влево увеличивает базовое значение на 1.",
+	"board.help.swipeRight.main": "Свайп вправо уменьшает базовое значение на 1.",
+
+	"board.help.swipe": "Свайпами в край экрана удобнее пользоваться при выключенной анимации счётчиков.",
+
 	"board.help.press.main": "Уменьшает значение на 1.",
 	"board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения.",
 
