--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -2,7 +2,7 @@
 	"about.app": "Все права на представленную в этом приложении информацию о карточной игре «Ужас Аркхэма» — как текстовую, так и графическую — принадлежат компании <FFG>Fantasy Flight Games</FFG>. Создатель этого приложения не аффилирован и никоим образом не поддерживается Fantasy Flight Games.",
 	"about.credits": "Это приложение создано <Author>Владимиром Языковым</Author> и участниками сообщества в поддержку игры Arkham Horror: The Card Game. Исходный код проекта доступен на <Repo>GitHub</Repo>. Обратную связь и сообщения об ошибках можно оставить через <Issues>задачи на GitHub</Issues> или в <Telegram>ветке «Мастерская»</Telegram> Telegram-канала российского сообщества «Ужас Аркхэма»",
 	"about.artwork": "Все художественные материалы и иллюстрации являются интеллектуальной собственностью их авторов. Все изображения и графика Arkham Horror: The Card Game™ защищены авторским правом компании Fantasy Flight Games.",
-
+	"about.disclaimer": "Это неофициальное, фанатское приложение для игры в реальном времени. Оно не связано с или одобрено Fantasy Flight Games или другими правообладателями. Все художественные материалы и текст используются только в образовательных целях. Никакие материалы не продаются, распространяются или модифицируются для коммерческой выгоды.",
 	"about.credits.beth": "Спасибо моей супруге Лизе за её понимание и поддержку. Благодаря ей я самый счастливый человек на Земле.",
 
 	"about.hallOfFame.zzorba": "Arkham Cards API, проект Icomoon, переводы Arkham Cards",
