--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -1,4 +1,5 @@
 {
+	"error.downloadFailed": "Failed to download content. Details: {{error}}",
 	"app.disclaimer": "Arkham Horror: The Card Game™ and all related content © Fantasy Flight Games (FFG). This app is not produced, endorsed by or affiliated with FFG.",
 	"modal.theme.title": "Install Theme",
 	"modal.theme.text": "Enter a theme URL. The app doesn’t host or provide any third-party content",
