--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -1,5 +1,5 @@
 {
-	"error.downloadFailed": "Не удалось загрузить контент. Подробности: {{error}}",
+	"error.downloadFailed": "Не удалось загрузить контент. Попробуйте позже или измените подключение к сети. Подробности: {{error}}",
 	"app.disclaimer": "Arkham Horror: The Card Game™ и все связанные материалы © Fantasy Flight Games (FFG). Это приложение не является продуктом, одобренным или связанным с FFG.",
 	"modal.theme.title": "Установить тему",
 	"modal.theme.text": "Введите URL-адрес темы",
